# safenet

./: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: docker-deploy.yaml  publish-docker.yaml
etc/: safenet.yaml
internal/cmd/: check.go  root.go
src/safenet/: __init__.py  __main__.py  config.py  targets.py  util.py  version.py
